<resources>
    <string name="app_name">ites22032024</string>
    <string name="volver">Volver</string>
    <string name="salir_al_login">Salir al login</string>
    <string name="Acercade">A cerca del programador</string>
    <string name="Salir">Salir</string>
    <string name="Ingresar">Ingresar</string>
    <string name="ingrse_su_usuario">Ingrese su usuario:</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña:</string>
    <string name="Llamar">Llamar</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="datos_del_programador">Datos del Programador</string>
    <string name="nuestros_productos">Nuestros Productos</string>
</resources>