<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00643C"
    tools:context=".SegundaActivity">

    <ImageView
        android:id="@+id/imglogosegunda"
        android:layout_width="139dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btnsalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/starbucks_corporation_logo_2011_svg" />

    <Button
        android:id="@+id/btnsalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Salir"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="salirlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <Button
        android:id="@+id/btnacercade"
        android:layout_width="198dp"
        android:layout_height="60dp"
        android:onClick="acercade"
        android:text="A cerca del programador"
        android:textSize="14sp"
        app:icon="@drawable/a_cerca_de"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/imglogosegunda"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btnllamar"
        android:layout_width="189dp"
        android:layout_height="63dp"
        android:layout_marginTop="84dp"
        android:text="@string/Llamar"
        app:icon="@drawable/_55705"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toEndOf="@+id/imglogosegunda"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnenviarcorreo"
        android:layout_width="302dp"
        android:layout_height="57dp"
        android:text="@string/enviar_correo"
        app:icon="@drawable/_5645"
        app:layout_constraintBottom_toTopOf="@+id/btnsalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnllamar"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/txtanuncio"
        android:layout_width="196dp"
        android:layout_height="23dp"
        android:text="@string/nuestros_productos"
        android:textColor="#F4EDED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="186dp"
        android:layout_height="384dp"
        app:layout_constraintBottom_toTopOf="@+id/btnsalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnenviarcorreo"
        app:srcCompat="@drawable/cartel1" />

</androidx.constraintlayout.widget.ConstraintLayout>