<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00643C"
    android:backgroundTint="#00643C"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textocorreo"
        android:layout_width="292dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:backgroundTint="#191818"
        android:ems="10"
        android:hint="@string/ingrse_su_usuario"
        android:inputType="textEmailAddress"
        android:textColorHint="#FAF2F2"
        app:layout_constraintBottom_toTopOf="@+id/textocontrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogo"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/textocontrasenia"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:backgroundTint="#131313"
        android:ems="10"
        android:hint="@string/ingrese_su_contrase_a"
        android:inputType="textPassword"
        android:textColorHint="#F6F0F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702" />

    <Button
        android:id="@+id/btningresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:onClick="login"
        android:text="@string/Ingresar"
        android:textColor="#C5CAE9"
        android:textColorLink="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textocontrasenia"
        app:layout_constraintVertical_bias="0.512" />

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="201dp"
        android:layout_height="173dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/starbucks_corporation_logo_2011_svg"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>